web part finished

--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -26,8 +26,8 @@
                 <div data-v-5201059f="" data-v-06b49fcb="" class="authorization-form">
                     <form enctype="multipart/form-data" method="post" action="/predict">
                          <div class="fl_upld">
-                            <input id="fl_title" type="search" name="title">
-                                 <select class="select-css", name="type">
+                            <input id="fl_title" type="search" placeholder="Несколько слов" name="title">
+                                 <select class="select-css" name="type">
                                     <option>Ямб</option>
                                     <option>Хорей</option>
                                     <option>Дольник2</option>
